crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__basic_math.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: "format!(\"{v:#?}\")"
---
BinaryOp(
    BinaryOp {
        lhs: Num(
            2.0,
        ),
        op: Add,
        rhs: BinaryOp(
            BinaryOp {
                lhs: Num(
                    2.0,
                ),
                op: Mul,
                rhs: Num(
                    2.0,
                ),
            },
        ),
    },
)
