crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__if_then_else.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: "format!(\"{v:#?}\")"
---
IfElse(
    IfElse {
        cond: IfSpecData {
            span: virtual:<test>:0-2,
            cond: Literal(
                True,
            ),
        },
        cond_then: Num(
            1.0,
        ),
        cond_else: Some(
            Num(
                2.0,
            ),
        ),
    },
)
