crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__literals.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: "format!(\"{v:#?}\")"
---
Arr(
    [
        Literal(
            Null,
        ),
        Literal(
            True,
        ),
        Literal(
            False,
        ),
        Literal(
            This,
        ),
        Literal(
            Super,
        ),
        Literal(
            Dollar,
        ),
    ],
)
