crates/jrsonnet-ir-parser/src/snapshots/jrsonnet_ir_parser__tests__obj_extend.snap
---
source: crates/jrsonnet-ir-parser/src/lib.rs
expression: "format!(\"{v:#?}\")"
---
ObjExtend(
    Obj(
        MemberList(
            ObjMembers {
                locals: [],
                asserts: [],
                fields: [],
            },
        ),
    ),
    MemberList(
        ObjMembers {
            locals: [],
            asserts: [],
            fields: [
                FieldMember {
                    name: Fixed(
                        "x",
                    ) from virtual:<test>:5-6,
                    plus: false,
                    params: None,
                    visibility: Normal,
                    value: Num(
                        1.0,
                    ),
                },
            ],
        },
    ),
)
